@@ -1253,6 +1253,12 @@ RESX_FILTER_NAME=ResX
 # HelpAndManualFilter.java
 HELPANDMANUAL_FILTER_NAME=Help & Manual
 
+# Properties.java
+PROPERTIES_FILTER_NAME=Java Properties XML
+
+# Schematron.java
+SCHEMATRON_FILTER_NAME=Schematron
+
 # CamtasiaWindowsFilter.java
 CAMTASIAWINDOWS_FILTER_NAME=Camtasia for Windows
 
