@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 3.6.0
 ----------------------------------------------------------------------
-  10 Enhancements
+ 11 Enhancements
   3 Bug fixes
 ----------------------------------------------------------------------
 3.6.0 vs 3.5.3
@@ -34,6 +34,9 @@
 
   - Immediately apply changes to automatic save interval
   https://sourceforge.net/p/omegat/feature-requests/1174/
+
+  - Filters for Java Properties XML and Schematron 
+  https://sourceforge.net/p/omegat/feature-requests/1147/
 
   Bug fixes:
 
